--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,10 @@
 <h1>Games#new</h1>
 <p>Find me in app/views/games/new.html.erb</p>
 
-<!-- <h2>score</h2> -->
+<div class="letters">
+  <% @letters.each do |letter| %>
+    <div class="letter"><%= letter %></div>
+
+  <% end %>
+</div>
+
